Added screens to show users

--- a/HurtLogger/HurtLogger.csproj
+++ b/HurtLogger/HurtLogger.csproj
@@ -40,7 +40,9 @@
     <Compile Include="ISQLite.cs" />
     <Compile Include="HurtLoggerDatabase.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="VIewModel\UsersPage.cs" />
+    <Compile Include="VIewModel\Users\UsersPage.cs" />
+    <Compile Include="VIewModel\Users\UsersListPage.cs" />
+    <Compile Include="VIewModel\Users\UserItemCell.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -62,5 +64,6 @@
     <Folder Include="VIewModel\" />
     <Folder Include="Views\" />
     <Folder Include="Models\" />
+    <Folder Include="VIewModel\Users\" />
   </ItemGroup>
 </Project>
