added HurtLog class and some associated pages

--- a/HurtLogger/HurtLogger.csproj
+++ b/HurtLogger/HurtLogger.csproj
@@ -43,6 +43,11 @@
     <Compile Include="VIewModel\Users\UsersPage.cs" />
     <Compile Include="VIewModel\Users\UsersListPage.cs" />
     <Compile Include="VIewModel\Users\UserItemCell.cs" />
+    <Compile Include="Utilities\Helper.cs" />
+    <Compile Include="Models\HurtLog.cs" />
+    <Compile Include="VIewModel\HurtLogs\HurtLogItemCell.cs" />
+    <Compile Include="VIewModel\HurtLogs\HurtLogPage.cs" />
+    <Compile Include="VIewModel\HurtLogs\HurtLogListPage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -65,5 +70,7 @@
     <Folder Include="Views\" />
     <Folder Include="Models\" />
     <Folder Include="VIewModel\Users\" />
+    <Folder Include="Utilities\" />
+    <Folder Include="VIewModel\HurtLogs\" />
   </ItemGroup>
 </Project>
