--- a/HurtLogger/HurtLogger.csproj
+++ b/HurtLogger/HurtLogger.csproj
@@ -48,6 +48,10 @@
     <Compile Include="VIewModel\HurtLogs\HurtLogItemCell.cs" />
     <Compile Include="VIewModel\HurtLogs\HurtLogPage.cs" />
     <Compile Include="VIewModel\HurtLogs\HurtLogListPage.cs" />
+    <Compile Include="Views\ProfileListView.xaml.cs">
+      <DependentUpon>ProfileListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Layout\Colors.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -72,5 +76,11 @@
     <Folder Include="VIewModel\Users\" />
     <Folder Include="Utilities\" />
     <Folder Include="VIewModel\HurtLogs\" />
+    <Folder Include="Layout\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ProfileListView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
