added hurtlogger logo

--- a/iOS/HurtLogger.iOS.csproj
+++ b/iOS/HurtLogger.iOS.csproj
@@ -130,6 +130,8 @@
     <BundleResource Include="Resources\Icon-Small-40.png" />
     <BundleResource Include="Resources\Icon-Small-40%402x.png" />
     <BundleResource Include="Resources\Icon-Small-40%403x.png" />
+    <BundleResource Include="Resources\hurtlogger.jpg" />
+    <BundleResource Include="Resources\hurtlogger80.png" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
