--- a/HurtLogger/HurtLogger.csproj
+++ b/HurtLogger/HurtLogger.csproj
@@ -52,6 +52,7 @@
       <DependentUpon>ProfileListView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Layout\Colors.cs" />
+    <Compile Include="VIewModel\Reports\ReportsListPage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -77,6 +78,7 @@
     <Folder Include="Utilities\" />
     <Folder Include="VIewModel\HurtLogs\" />
     <Folder Include="Layout\" />
+    <Folder Include="VIewModel\Reports\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ProfileListView.xaml">
