--- a/HurtLogger/HurtLogger.csproj
+++ b/HurtLogger/HurtLogger.csproj
@@ -53,6 +53,8 @@
     </Compile>
     <Compile Include="Layout\Colors.cs" />
     <Compile Include="VIewModel\Reports\ReportsListPage.cs" />
+    <Compile Include="VIewModel\HurtLogs\HurtLogUserListPage.cs" />
+    <Compile Include="VIewModel\HurtLogs\AddHurtLogPage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.1.6296\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
