--- a/Droid/HurtLogger.Droid.csproj
+++ b/Droid/HurtLogger.Droid.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite_Android.cs" />
+    <Compile Include="PlatformSpecific\CustomRenderer\LabelFontRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -86,6 +87,8 @@
     <Folder Include="Resources\layout\" />
     <Folder Include="Resources\values\" />
     <Folder Include="Resources\raw\" />
+    <Folder Include="PlatformSpecific\" />
+    <Folder Include="PlatformSpecific\CustomRenderer\" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
