--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.hurtlogger" android:versionName="1" android:versionCode="2">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
-	<application android:label="HurtLogger" android:icon="@drawable/hurtlogger80">
+	<application android:label="HurtLogger" android:icon="@drawable/icon">
 	</application>
 </manifest>
