--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.hurtlogger" android:versionName="1" android:versionCode="2">
+ 
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
-	<application android:label="HurtLogger" android:icon="@drawable/ic_launcher">
+
+	<application android:label="HurtLogger" android:icon="@drawable/hurtlogger80">
+	<supports-screens android:resizeable="true"
+                  android:smallScreens="false"
+                  android:normalScreens="true"
+                  android:largeScreens= "true"
+                  android:xlargeScreens="true"
+                  android:anyDensity="true"
+                  android:compatibleWidthLimitDp="320"/>
 	</application>
 </manifest>
